# rust-boiler

./: .dockerignore  Cargo.toml  Dockerfile  atlas.hcl  config.json  configuration.yaml  schema.sql
configuration/: base.json
migrations/: 20240421000939_initial.sql  atlas.sum
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/entities/: subscription.rs
src/routes/: healthcheck.rs  mod.rs  subscriptions.rs
tests/: healthcheck.rs
